--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
                 <li><a href="sass.html">Sass</a></li>
                 <li><a href="badges.html">Components</a></li>
                 <li><a href="collapsible.html">JavaScript</a></li>
+            </div>
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Información</a></li>
+                    <li><a href="#">Contacto</a></li>
+                </ul>
+            </nav>
               </ul>
             </div>
           </nav>
